# modular-fortress

./: .gitignore  CLAUDE.md  DPN.md  DPS.md  EM Master Database - People Directory.csv  INK.md  Modular Fortress.md  ROADMAP.md  bumptop.html  em-org-graph.html  export_db_to_markdown.py  go.work  go.work.sum  noosphere-desktop.html  vault-map.html  wiki-index.html
noosphere/: .env.example  Cargo.toml  QUICKSTART.md  README.md
noosphere/src/: lib.rs  main.rs
noosphere/src/api/: conversations.rs  ghosts.rs  mod.rs  pipelines.rs  system.rs  tasks.rs
noosphere/src/api/handlers/: af64_agents.rs  af64_conversations.rs  af64_documents.rs  af64_drives.rs  af64_fitness.rs  af64_memory.rs  af64_perception.rs  af64_tasks.rs  af64_tick_log.rs  agent_requests.rs  archives.rs  areas.rs  auth.rs  decisions.rs  documents.rs  events.rs  graph.rs  health.rs  mod.rs  projects.rs  publish.rs  reading.rs  reading_opml.rs.patch  resources.rs  tasks.rs  templates.rs  timeline.rs  xmpp.rs
noosphere/src/core/: lib.rs
noosphere/src/core/cache/: hybrid.rs  mod.rs  sqlite.rs  sync_queue.rs
noosphere/src/core/context/: injection.rs  mod.rs  relevance.rs
noosphere/src/core/conversations/: mod.rs
noosphere/src/core/db/: archives.rs  areas.rs  connection.rs  documents.rs  events.rs  memories.rs  mod.rs  projects.rs  resources.rs  stagehand.rs  tasks.rs  templates.rs  tests.rs
noosphere/src/core/dedup/: analyzer.rs  canonicalizer.rs  migrator.rs  mod.rs  types.rs
noosphere/src/core/embeddings/: batch.rs  generator.rs  (+2 more)
noosphere/src/mcp/: mod.rs
noosphere/static/: noosphere-ops.html
(+575 files in other folders)
