[package]
name = "noosphere"
version = "0.1.0"
edition = "2021"
authors = ["n8k99"]
description = "Ghosts in the Noosphere - Personal autonomous agent operations"

[[bin]]
name = "noosphere"
path = "src/main.rs"

[lib]
name = "noosphere"
path = "src/lib.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }

# Database
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-native-tls", "json", "chrono", "uuid"] }
rusqlite = { version = "0.31", features = ["bundled"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# ICS parsing
ical = "0.11"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# RSS/Atom parsing
feed-rs = "2.1"
scraper = "0.21"
url = "2.5"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment
dotenvy = "0.15"
once_cell = "1.21.3"
dirs = "5"

# Utilities
regex = "1"
rand = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }

# Authentication (for future multi-user if needed)
jsonwebtoken = "9"
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
